# othello_world

./: pyproject.toml  requirements.txt  train_gpt_othello.ipynb
mingpt/: dataset.py
notebook/: explore_rashambow.ipynb  rps_F.npy  rps_F_throws=25.npy  rps_names.npy  rps_tourney_throws=25.txt
