[tool.poetry]
name = "othello-world"
version = "0.1.0"
description = ""
authors = ["David S"]
license = "MIT"
readme = "README.md"
packages = [{include = "othello_world"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
seaborn = "^0.12.2"
pgnparser = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
